refactor(core): decouple orchestration engine boundaries and apply 15-line limit compliance